--- a/README.rdoc
+++ b/README.rdoc
@@ -13,3 +13,21 @@ Play Framework 2.3.5
 Ebean,
 SBT,
 H2 database/MySQL
+
+Instruction:
+1) git clone github.com/vgudzhev/ssrs
+2) open command prompt and navigate to the cloned repo
+3)type->
+activator cleanFiles
+activator run
+
+-> The web app is ready;
+** If you want to use MySQL, not H2base you must uncoment the following lines from root/conf/application.conf:
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://127.0.0.1:3306/ssrs"
+db.default.user="root"
+db.default.pass="pass"
+
+4)Default credentials:
+admin-user: admin@mail.bg
+password: pass
